2005-06-04  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a3 TAGGED FOR RELEASE ***

2005-06-02  Jim Ingham  <jingham@apple.com>

	* generic/tkEvent.c (InvokeFocusHandlers): On Mac OS X the
	scrollwheel events are sent to the window under the mouse,
	not to the focus window.
	
	Another patch from M. Kirkham.

	* macosx/tkMacOSXScrlbr.c (ThumbActionProc, ScrollBarBindProc):
	Record the first mouse down point, and compute differences from
	that, rather than getting the mouse down each time through the
	loop.  The old method would get fooled if you moved the mouse less
	than a text line height in the text widget.
	[Bug 1083728]

2005-06-03  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: fixed 'embedded' target.

2005-06-02  Reinhard Max  <max@suse.de>

	* unix/tkUnix.c (Tk_GetUserInactiveTime): Improvements to get it
	working on Solaris, and panic if we run out of memory.
	* unix/configure.in: Rework the searching for Xss, to make it work
	on Solaris and provide more useful output. Use AC_HELP_STRING
	where appropriate.
	* unix/tcl.m4: synced from Tcl.
	* unix/configure: regenerated with autoconf 2.59.
	
2005-06-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinInt.h: added private decls of Tk_GetEmbeddedMenuHWND,
	Tk_GetMenuHWND, TkWinCleanupContainerList, and TkpWmGetState to
	that are used across source files.

	* win/tkWinX.c (Tk_ResetUserInactiveTime): cast to squelch
	compiler warning.

2005-05-31  Reinhard Max  <max@suse.de>

	* doc/Inactive.3 (new file): C level API documentationn for
	TIP#245 (Tk_GetUserInactiveTime, Tk_ResetUserInactiveTime).
	* tests/tk.test: Added tests for the TIP#245 implementation.

2005-05-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkPanedWindow.c, tests/panedwindow.test: batch of fixes
	to panedwindow from Daniel South.  Improved auto-size to fit
	internal windows, fixed sash placement at edge of pane, fixed
	calculation of stretch amount for internal windows.